src/FinancialForce Accounting/objects/codaPaymentMediaDetail__c.object
<CustomObject>
    <customHelpPage>codahelppayment</customHelpPage>
    <description>Holds information for payment transmission including transaction and transaction line information.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PaymentMediaDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentDate__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DocumentDescription__c</fullName>
        <label>Document Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentNumber__c</fullName>
        <label>Document Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Purchase Invoice</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Journal</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
                <value>
                    <fullName>Purchase Credit Note</fullName>
                </value>
                <value>
                    <fullName>Cash Matching Journal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OriginalValue__c</fullName>
        <label>Original Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutstandingValue__c</fullName>
        <label>Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Payment Media Details (Company)</relationshipLabel>
        <relationshipName>PaymentMediaDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartialPaymentValue__c</fullName>
        <label>Partial Payment Value</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentMediaSummary__c</fullName>
        <label>Payment Media Summary</label>
        <referenceTo>codaPaymentMediaSummary__c</referenceTo>
        <relationshipLabel>Payment Media Details</relationshipLabel>
        <relationshipName>PaymentMediaDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PaymentValue__c</fullName>
        <formula>IF (ISBLANK(PartialPaymentValue__c) ,   OriginalValue__c  -  Discount__c,   PartialPaymentValue__c)</formula>
        <label>Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransactionNumber__c</fullName>
        <label>Transaction Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VendorReference__c</fullName>
        <label>Vendor Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Payment Media Detail</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Media Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Media Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>